Script cartola improvements

--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build-starter-team && npm run build-finisher-team && npm run build-expert-team",
-    "build-starter-team": "rollup build-starter.js --file starter.js --format es",
-    "build-finisher-team": "rollup build-finisher.js --file finisher.js --format es",
+    "build": "npm run build-cartola-team && npm run build-expert-team",
+    "build-cartola-team": "rollup build-cartola.js --file cartola.js --format es",
     "build-expert-team": "rollup build-expert.js --file expert.js --format es",
     "build-popup": "rollup build-expert.js --file popup.js --format es"
   },
